add new get for La liste qui pour chaque genre d'arbre donne le nombre d'arbres de ce genre